
  * include/cppunit/XmlOutputter.h:
  * src/cppunit/XmlOutputter.cpp: updated against 
    XmlOutputterHook changes. Renamed 'node' occurences to 'element'.

  * src/cppunit/Message.cpp:
  * src/cppunit/XmlElement.cpp: added missing include <stdexcept>

  * examples/ClockerPlugIn/ClockerXmlHook.h:
  * examples/ClockerPlugIn/ClockerXmlHook.cpp: updated against 
    XmlOutputterHook changes.

  * examples/cppunittest/MessageTest.cpp:
  * examples/cppunittest/XmlElement.cpp: added missing include <stdexcept>.

  * examples/cppunittest/XmlElementTest.h:
  * examples/cppunittest/XmlElementTest.cpp: Renamed 'node' occurences 
    to 'element'.

  * examples/cppunittest/XmlOutputterTest.cpp: updated against 
    XmlOutputterHook changes.

  * examples/cppunittest/StringToolsTest.h:
  * examples/cppunittest/StringToolsTest.cpp: added. Unit tests for 
    StringTools. Turn out that VC++ dismiss empty lines in tools output, 
    which is the reason why empty lines where not printed in 
    CompilerOutputter.

2002-06-14 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/plugin/PlugInManager.h:
  * src/cppunit/PlugInManager.cpp: added two methods to use the plug-in
    interface for Xml Outputter hooks.

  * include/cppunit/plugin/TestPlugIn.h: added two methods to the plug-in
    interface for Xml Outputter hooks.

  * include/cppunit/plugin/TestPlugInAdapter.h:
  * src/cppunit/plugin/TestPlugInAdapter.cpp: renamed TestPlugInDefaultImpl.
    Added empty implementation for Xml outputter hook methods.

  * include/cppunit/tools/StringTools.h:
  * src/cppunit/tools/StringTools.cpp: added. Functions to manipulate string
    (conversion, wrapping...)

  * include/cppunit/tools/XmlElement.h:
  * src/cppunit/XmlElement.cpp: renamed addNode() to addElement(). Added
    methods to walk and modify XmlElement (for hook). Added documentation.
    Use StringTools.

  * include/cppunit/XmlOutputter.h:
  * src/cppunit/XmlOutputter.cpp: added hook calls & management.
